# NobleOS

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rust_uefi_example_build.py  x86_64-pc-noble.json  x86_64-pc-none-noblekernel.json
.cargo/: config
.config/: limine.cfg
Gluon/: Cargo.toml
Gluon/src/: idt.rs  lib.rs  mem.rs  pci.rs  pic.rs  ps2.rs  sysv_executable.rs  x86_64_paging.rs  x86_64_pci.rs  x86_64_ps2.rs  x86_64_segmentation.rs  x86_64_syscall.rs  x86_64_timers.rs
Gluon/src/noble/: address_space.rs  data_type.rs  file_system.rs  input_events.rs  mod.rs  return_code.rs  system_calls.rs
Gluon/src/pc/: fat.rs  mod.rs  pci.rs  pic.rs  pit.rs  ports.rs  ps2.rs
Gluon/src/sysv/: executable.rs  mod.rs
Gluon/src/x86_64/: instructions.rs  lapic.rs  mod.rs  msr.rs  paging.rs  pci.rs  pic.rs  pit.rs  port.rs  registers.rs  segmentation.rs  syscall.rs
Helium/: Cargo.toml
Helium/src/: alloc.rs  gdt.rs  kstruct.rs  limine.rs  limine_boot.rs  main.rs  pmm.rs
Hydrogen/: Cargo.toml
Hydrogen/src/: main.rs  start_screen.rs
Neon/: cargo.toml
Neon/src/: main.rs
Photon/: Cargo.toml
Photon/src/: font_16_16.rs  font_handler.rs  lib.rs  line_draw.rs
Photon/src/formats/: f1.rs  f2.rs  mod.rs
