[package]
name = "hydrogen"
version = "0.1.0"
edition = "2018"

[features]
qemu = []

# uefi-services = {version = "0.8.0", features = ["no_panic_handler"]}
# uefi-services = {version = "0.8.0"}

[dependencies]
photon = {path = "../Photon"}
gluon = {path = "../Gluon"}
uefi = "0.13.0"
uefi-services = {version = "0.10.0", features = ["no_panic_handler"]}
rlibc = "1.0.0"
log = "0.4.14"
x86_64 = "0.14.7"
